Hotfix/format (#625)
* autoformat